working on getting a twitter feed going

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -19,41 +19,18 @@ $$$        $$$,     $$$ $$,    $$ $$""""
       </pre>
     </div>
 
-    <pre class="header_vertical_divider">
-+
-|
-|
-+
-|
-|
-|
-|
-|
-|
-|
-|
-|
-    </pre>
-
-    <p class="horizontal_header_divider">--------------------------------</p>
-
     <ul id="main_nav">
       <li><a href="">>blog<</a></li>
       <li><a href="">projects</a></li>
       <li><a href="">resume</a></li>
     </ul>
-    <p class="horizontal_header_divider">--------------------------------</p>
     
     <div id="about_me">
       <h2>Who am I?</h2>
       <p>
-        I am a goblin, entombed deep beneath the Earth
-        with only an Apple Classic and limited internet connectivity. 
-        Subsequently, I've had to eat all of my friends &amp;
-        family and am quite lonely (and still very hungry). I'm currently
-        designing a game 
-        based on a dream I have where I'm a wizard in hopes that it will take my mind
-        off of food.
+        My name is Cody Johnston. I've been proramming Ruby (often in conjunction with Rails)
+        for about 2 years. Besides coding Rails applications as a dayjob, I am also working on an epic
+        computer game written almost exclusively in Ruby.
       </p>
       <p><span class="bold">email:</span> cody@codegobl.in</p>
       <p><span class="bold">github:</span> codegoblin</p>
@@ -63,55 +40,19 @@ $$$        $$$,     $$$ $$,    $$ $$""""
   </div>
 
 
-  <p class="horizontal_section_divider">-------------------------------------------------------------------+--------------------------------</p>
   <div id="goblin_radio">Goblin Radio - Click To Play</div>
-  <p class="horizontal_section_divider">-------------------------------------------------------------------+--------------------------------</p>
     
   <div id="content">
     <div id="content_left">
-      Hi there!
+      <p>Blog Entries:</p>
     </div>
-    <pre class="content_vertical_divider">
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-    </pre>
+
 
     <div id="content_right">
+      <p>Twitter Feed (@codegoblin):</p>
     </div>
   </div>
 
-  <p class="horizontal_section_divider">-------------------------------------------------------------------+--------------------------------</p>
 
   <div id="footer"></div>
 
