change namespaces; delete entries_controller; refactor or two;

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     #page_container
       #header
         #logo_area
-          = image_tag("codegoblin.png", :id => "logo")
+          = image_tag("codegoblin.png", id: "logo")
 
           %pre(id = "ascii_title")
             = preserve render_logo
