--- a/app/views/public/blog/show.html.haml
+++ b/app/views/public/blog/show.html.haml
@@ -9,7 +9,9 @@
       %li
         %h3= render_entry_date(entry.created_at) 
         %p= entry.text
-  %h2 Github Feed (https://github.com/codegoblin):
+  %a{href:"http://www.github.com/codegoblin"}
+    %img{style: "height:32px;width:32px;display:inline-block;", src:"http://gems.github.com/octocat.png", alt:"go to codegoblin's github"}>
+  %h2{style: "display:inline-block"} Github Feed (https://github.com/codegoblin):
   %ul
     - @github_entries.each do |entry|
       %li
