style feed icons

--- a/app/assets/stylesheets/stylemaster.css.scss
+++ b/app/assets/stylesheets/stylemaster.css.scss
@@ -45,6 +45,10 @@ html {
       #content {
         display: inline-block;
         font-size: 10px;
+
+        img.feed {
+          margin-bottom: -4px;
+        }
       }
 
       #footer {
