--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    %link{rel:"shortcut icon", href:"/favicon.ico"}
     %title codegobl.in
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
