--- a/app/views/public/blog/show.html.haml
+++ b/app/views/public/blog/show.html.haml
@@ -1,20 +1,33 @@
 #content
-  %h2{style: "display:inline-block"} Twitter Feed
-  %a{href:"http://www.twitter.com/codegoblin"}
-    %img{class: "feed", style: "display:inline-block", src:"http://twitter-badges.s3.amazonaws.com/t_mini-a.png", alt:"Follow codegoblin on Twitter"}>
-
-  %ul
-    - @twitter_entries.each do |entry|
-      %li
-        %h3= render_entry_date(entry.created_at) 
-        %p= entry.text
-  %h2{style: "display:inline-block"} Github Feed
-  %a{href:"http://www.github.com/codegoblin"}
-    %img{class: "feed", style: "height:32px;width:32px;display:inline-block;", src:"http://gems.github.com/octocat.png", alt:"go to codegoblin's github"}>
-  %ul
-    - @github_entries.each do |entry|
-      %li
-        %h3= render_entry_date(entry.updated)
-        %p= entry.title
-        %p
-          != entry.content
+  #feed-container
+    #left-column.feed-column
+      %h2{style: "display:inline-block"} Tumblr Feed
+      %a{href:"http://codegoblin.tumblr.com/"}
+        %img{class: "feed", style: "height:16px;width:16px;display:inline-block", src:"images/tumblr_icon.gif", alt:"Follow codegoblin on Tumblr"}>
+      %ul
+        -@tumblr_entries.each do |entry|
+          %li
+            %h3= render_entry_date(entry.published)
+            %p= entry.title
+            %p
+              != entry.summary
+    #center-column.feed-column
+      %h2{style: "display:inline-block"} Twitter Feed
+      %a{href:"http://www.twitter.com/codegoblin"}
+        %img{class: "feed", style: "display:inline-block", src:"http://twitter-badges.s3.amazonaws.com/t_mini-a.png", alt:"Follow codegoblin on Twitter"}>
+      %ul
+        - @twitter_entries.each do |entry|
+          %li
+            %h3= render_entry_date(entry.created_at)
+            %p= entry.text
+    #right-column.feed-column
+      %h2{style: "display:inline-block"} Github Feed
+      %a{href:"http://www.github.com/codegoblin"}
+        %img{class: "feed", style: "height:32px;width:32px;display:inline-block;", src:"http://gems.github.com/octocat.png", alt:"go to codegoblin's github"}>
+      %ul
+        - @github_entries.each do |entry|
+          %li
+            %h3= render_entry_date(entry.updated)
+            %p= entry.title
+            %p
+              != entry.content
