--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,8 @@
   %body
     #page_container
       %a{href:"http://github.com/codegoblin"}
-        %img{ style: "position: absolute; top: 0; left: 0; border: 0;",
-              src: "https://a248.e.akamai.net/assets.github.com/img/c641758e06304bc53ae7f633269018169e7e5851/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67",
+        %img{ style: "position: absolute; top: 0; right: 0; border: 0;",
+              src: "https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67",
               alt: "Fork me on GitHub" }
       #header
         #logo_area
@@ -20,6 +20,7 @@
           = image_tag("codegoblin.png", id: "logo")
           %pre(class = "ascii_title")
             = preserve render_ascii_logo_rest
+        %h2 by Cody Johnston | Rails Programmer | Science Fan
 
       %hr
 
